--- a/bower.json
+++ b/bower.json
@@ -4,18 +4,18 @@
 	"description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js",
 	"dependencies": {
 		"bootstrap": "~3",
-		"angular": "~1.3",
+		"angular": "1.4.6",
 		"angular-resource": "~1.3",
 		"angular-mocks": "~1.3",
 		"angular-cookies": "~1.3",
-		"angular-animate": "~1.3",
+		"angular-animate": "1.4.6",
 		"angular-touch": "~1.3",
 		"angular-sanitize": "~1.3",
 		"angular-bootstrap": "~0.11.2",
 		"angular-ui-utils": "~0.1.1",
 		"angular-ui-router": "~0.2.11",
-		"angular-aria": "~1.3",
+		"angular-aria": "1.4.6",
 		"angular-messages": "~1.3",
-		"angular-material": "~0.11.4"
+		"angular-material": "0.11.2"
 	}
 }
